# sqlpp11-connector-mysql

./: .appveyor.yml  .travis.yml  CMakeLists.txt
cmake/: FindMySQL.cmake
src/: CMakeLists.txt  sqlpp-mysql-config.cmake.in
test-install/: CMakeLists.txt
tests/: CMakeLists.txt  JsonTest.cpp
